[project]
name = "agentscrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "fahlevi20",email = "rozakalfi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-ollama (>=0.2.3,<0.4.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
